# dyn-lf-renderer

./: .gitignore  .gitmodules  README.md
preprocessor/: README.md  decompress_depth.sh  pyproject.toml
preprocessor/rtdlf_preprocessor/: data_loader.py  main.py  threadpool.py  util.py  writers.py
preprocessor/rtdlf_preprocessor/generators/: __init__.py  fragment_generator.py  generator.py  vertex_generator.py
preprocessor/rtdlf_preprocessor/vertex/: depth_processor.py  point_cloud.py  util.py
preprocessor/rtdlf_preprocessor/vertex/voxel/: README.md  bitvec.py  static.py
preprocessor/rtdlf_preprocessor/video/: __init__.py  camera.py  color_video.py  depth_video.py  video.py
renderer/: CMakeLists.txt  README.md
renderer/include/: application.h  camera_selector.h  profiler.h  threadpool.h
renderer/include/codec/: dct_matrix_provider.h
renderer/include/codec/decoder/: decoder.h  i_dct.h  i_exp_golomb.h  i_quantiser.h
renderer/include/codec/encoder/: dct.h  encoder.h  exp_golomb.h  frame_transformer.h  quantiser.h
renderer/include/codec/io/: frame_writer.h  yuv_reader.h
renderer/include/codec/structure/: bit_buffer.h  frame.h
renderer/include/decompress/: decompressor.h  vcl_decompressor.h
renderer/include/glad/: glad.h
renderer/include/gpu_wrappers/: atomic_counter.h  indirect_command.h  ssbo.h
renderer/include/input/: buffered_loader.h  json_reader.h  program_info.h  reader.h
renderer/include/meshes/: color_mesh_loader.h  dummy_mesh_loader.h  mesh_loader.h  obj_mesh_loader.h  raw_mesh_loader.h  voxel_pcl_loader.h
renderer/include/output/: writer.h
renderer/include/shaders/: depth_shader.h  shader_program.h
renderer/include/shaders/compute/: compute_shader.h
renderer/include/textures/: codec_texture.h  full_img_texture.h  jpeg_texture.h  raw_imgs_texture.h  texture.h  textures_loader.h  yuv_texture.h
renderer/include/uniforms/: camera_uniforms.h  uniforms.h
renderer/src/: application.cpp  camera_selector.cpp  glad.c  main.cpp  threadpool.cpp
renderer/src/codec/: dct_matrix_provider.cpp
renderer/src/codec/decoder/: decoder.cpp  i_dct.cpp  i_exp_golomb.cpp  i_quantiser.cpp  main.cpp
renderer/src/codec/encoder/: dct.cpp  encoder.cpp  exp_golomb.cpp  frame_transformer.cpp  main.cpp  quantiser.cpp
renderer/src/codec/io/: frame_writer.cpp  yuv_reader.cpp
renderer/src/codec/structure/: bit_buffer.cpp  block.cpp  frame.cpp
renderer/src/decompress/: vcl_decompressor.cpp
renderer/src/gpu_wrappers/: atomic_counter.cpp  indirect_command.cpp
renderer/src/input/: jpeg_reader.cpp  json_reader.cpp  program_info.cpp
renderer/src/meshes/: color_mesh_loader.cpp  dummy_mesh_loader.cpp  mesh_loader.cpp  obj_mesh_loader.cpp  raw_mesh_loader.cpp  voxel_pcl_loader.cpp
renderer/src/output/: stbi_writer.cpp
renderer/src/shaders/: ambient.fs  color.vs  dummy.fs  dummy.vs  full_img.fs  obj_mesh.vs  raw.fs  raw.vs  shader_program.cpp  yuv.fs
renderer/src/shaders/compute/: compute_shader.cpp  hull_cubes.glsl  hull_cubes_old.glsl
renderer/src/shaders/depth/: depth.fs  depth.vs  depth_shader.cpp
renderer/src/textures/: codec_texture.cpp  full_img_texture.cpp  jpeg_texture.cpp  raw_imgs_texture.cpp  texture.cpp  textures_loader.cpp  yuv_texture.cpp
renderer/src/uniforms/: camera_uniforms.cpp
renderer/tests/: tests_exp_golomb.cpp
